Bug 772422 - Ignore touch events when selecting text. r=smaug